[gd_scene load_steps=8 format=4 uid="uid://dvvve5ko0pv81"]

[ext_resource type="PackedScene" uid="uid://c3lnqei4itfpx" path="res://Prefab/TowerDefense/Character/TowerDefensePlant.tscn" id="1"]
[ext_resource type="Script" uid="uid://cqtxlmu6m62rd" path="res://Asset/Anime/Character/Plant/Cover/TwinSunShroom/Scene/TowerDefensePlantTwinSunShroom.gd" id="2"]
[ext_resource type="Resource" uid="uid://sp5rt703k7jn" path="res://Asset/Anime/Character/Plant/Cover/TwinSunShroom/Config/TowerDefensePlantTwinSunShroom.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://dkw4bmni0lnkt" path="res://Asset/Anime/Character/Plant/Cover/TwinSunShroom/TwinSunShroom.tscn" id="4"]
[ext_resource type="Script" uid="uid://b6lojhfkgvhsw" path="res://addons/AdobeAnimateEditor/Node/AdobeAnimateSlot.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://c5d74tbefbann" path="res://Script/Component/TowerDefense/Character/ProduceComponent/ProduceComponent.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://boq44pntt712l" path="res://Script/Component/TowerDefense/Character/GrowUpComponent/GrowUpComponent.tscn" id="7"]

[node name="TowerDefensePlantTwinSunShroom" node_paths=PackedStringArray("sprite") instance=ExtResource("1")]
script = ExtResource("2")
produceInterval = 25.0
sunNum = 25
growUpTime = 60.0
config = ExtResource("3")
sprite = NodePath("SpriteGroup/TransformPoint/TwinSunShroom")
Custom = []
gravity = 245.0

[node name="TransformPoint" parent="SpriteGroup" index="1"]
position = Vector2(0, 30)

[node name="TwinSunShroom" parent="SpriteGroup/TransformPoint" index="0" node_paths=PackedStringArray("layerSlot") instance=ExtResource("4")]
position = Vector2(0, -30)
layerSlot = [null, null, null, null, null, null, null, null, null, null, null, null, NodePath("AdobeAnimateSlot2"), null, null, NodePath("AdobeAnimateSlot"), null, null]

[node name="AdobeAnimateSlot" type="Node2D" parent="SpriteGroup/TransformPoint/TwinSunShroom" index="0"]
position = Vector2(-36.5767, -21.2817)
scale = Vector2(0.599991, 0.533991)
script = ExtResource("5")
followSlotId = 16
metadata/_custom_type_script = "uid://b6lojhfkgvhsw"

[node name="Marker2D" type="Marker2D" parent="SpriteGroup/TransformPoint/TwinSunShroom/AdobeAnimateSlot" index="0"]
position = Vector2(28.7227, 21.0459)

[node name="AdobeAnimateSlot2" type="Node2D" parent="SpriteGroup/TransformPoint/TwinSunShroom" index="1"]
position = Vector2(2.6833, -38.5417)
scale = Vector2(0.599991, 0.533991)
script = ExtResource("5")
followSlotId = 13
metadata/_custom_type_script = "uid://b6lojhfkgvhsw"

[node name="Marker2D" type="Marker2D" parent="SpriteGroup/TransformPoint/TwinSunShroom/AdobeAnimateSlot2" index="0"]
position = Vector2(28.7227, 21.0459)

[node name="ShadowSprite" parent="." index="3"]
position = Vector2(0, 30)

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 0)

[node name="ProduceComponent" parent="." index="7" node_paths=PackedStringArray("marker") instance=ExtResource("6")]
unique_name_in_owner = true
marker = [NodePath("../SpriteGroup/TransformPoint/TwinSunShroom/AdobeAnimateSlot/Marker2D"), NodePath("../SpriteGroup/TransformPoint/TwinSunShroom/AdobeAnimateSlot2/Marker2D")]

[node name="GrowUpComponent" parent="." index="8" instance=ExtResource("7")]
unique_name_in_owner = true
growUpTime = [60.0]
growUpSize = [1.25]

[connection signal="grow" from="GrowUpComponent" to="." method="GowUp"]
